<resources>
    <string name="enterYourEmail">Enter your Email</string>
    <string name="emailAlreadyInUse">Email already in use!</string>
    <string name="enterYourFullName">Enter your full name</string>
    <string name="enterYourUserName">Enter your user name</string>
    <string name="userNameIsAlreadyUsed">Username is already used</string>
    <string name="userNameIsNotValid">Username is not valid</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="enterYourPhone">Enter your phone</string>
    <string name="phoneIsNotValid">Phone is not valid</string>
    <string name="selectYourGender">Select your gender</string>
    <string name="emailIsNotValid">Email is not valid</string>
    <string name="dateOfBirthCanNotBeFromTheFuture">Date of Birth can\'t be from the future!</string>
    <string name="enterYourPassword">Enter your password</string>
    <string name="tooShortPassword">Too short password</string>
    <string name="enterYourConfirmPassword">Enter your Confirm Password</string>
    <string name="passwordDoesnotMatch">Password doesn\'t match</string>
    <string name="atLeast1Capital1Number1SpecialChar">At least 1 Capital, 1 Number and 1 Special Character</string>
    <string name="fullName">Full Name</string>
    <string name="userName">Username</string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="selectYourDateOfBirth">Select Your Date Of Birth</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="pickAProfilePicture">Pick a Profile Picture</string>
    <string name="skip">Skip</string>
    <string name="checkYourEmailForVerification">Check your email for verification</string>
    <string name="talkAboutYourself">Talk about yourself</string>
    <string name="yourBio">Your Bio</string>
    <string name="wrongPassword">Wrong Password!</string>
    <string name="doNotHaveAnAccount">Don\'t have an account?</string>
    <string name="noNetwork">No Network!</string>
    <string name="errorSigningIn">Error Signing In!</string>
    <string name="login">Login</string>
    <string name="orSignInWith">or sign in with</string>
    <string name="rememberPassword">remember password</string>
    <string name="checkYourEmailToResetYourPassword">Check your Email to reset your password</string>
    <string name="forgotYourPassword">Forgot Your Password?</string>
    <string name="submit">Submit</string>
    <string name="areYouSureYouWantToUnFollow">Are you sure you want to unfollow?</string>
    <string name="pressBackAgainToExit">Press BACK again to exit</string>
    <string name="suggestedPeople">Suggested people</string>
    <string name="notifications">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="writeAComment">Write a comment…</string>
    <string name="peopleLikedThisPost">People liked this post</string>
    <string name="anonymous">Anonymous</string>
    <string name="canNotSendHelpRequestToYourself">Can\'t send help request to yourself!</string>
    <string name="sendHelpRequestTo">Send Help Request to</string>
    <string name="cancel">Cancel</string>
    <string name="helpRequestIsSent">Help Request is Sent!</string>
    <string name="likedYourPost">liked your post</string>
    <string name="comments">comments</string>
    <string name="ratings">ratings</string>
    <string name="shares">shares</string>
    <string name="youHaveNoFollowings">You have no followings!</string>
    <string name="shared">Shared</string>
    <string name="postIsSavedSuccessfully">Post is saved successfully!</string>
    <string name="postIsDisabledSuccessfully">Post is disabled successfully!</string>
    <string name="postIsDeletedSuccessfully">Post is deleted successfully!</string>
    <string name="postIsHiddenSuccessfully">Post is hidden successfully!</string>
    <string name="userIsMutedSuccessfully">User is muted successfully!</string>
    <string name="userIsBlockedSuccessfully">User is blocked successfully!</string>
    <string name="postSharedSuccessfully">Post Shared successfully!</string>
    <string name="savedPosts">Saved Posts</string>
    <string name="searchYourState">Search your state</string>
    <string name="showInAllStates">Show in all states</string>
    <string name="orSelectAstate">or select a state</string>
    <string name="to">To</string>
    <string name="expressYourGratitude">Express your gratitude</string>
    <string name="writeAReview">Write a review</string>
    <string name="finised">Finished</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="recentSearches">Recent Searches</string>
    <string name="edit">Edit</string>
    <string name="searchHint">Search…</string>
    <string name="myProfile">My profile</string>
    <string name="trending">Trending</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="signOut">Sign out</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="mutedUsers">Muted Users</string>
    <string name="nightMode">Night Mode</string>
    <string name="favouriteCategories">Favourite Categories</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="changeYourPassword">Change Your Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="general">General</string>
    <string name="aboutApp">About App</string>
    <string name="blockedUsers">Blocked Users</string>
    <string name="editCountry">Edit Country</string>
    <string name="editEmail">Edit Email</string>
    <string name="editName">Edit Full Name</string>
    <string name="editUserName">Edit Username</string>
    <string name="editPassword">Edit Password</string>
    <string name="editPhone">Edit Phone</string>
    <string name="language">Language</string>
    <string name="selectYourLanguage">Select your language</string>
    <string name="notificationSettings">Notifications Settings</string>
    <string name="currentPassword">Current Password</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="newEmail">New Email</string>
    <string name="newPassword">New Password</string>
    <string name="witchLanguageDoYouSpeak">Witch language do you speak?</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="spanish">Española</string>
    <string name="portuguese">Português</string>
    <string name="german">Deutsche</string>
    <string name="italian">Italiano</string>
    <string name="done">Done</string>
    <string name="postCreatedSuccessfully">Post created successfully!</string>
    <string name="cameraPermissionIsRequired">Camera Permission is Required</string>
    <string name="post">Post</string>
    <string name="location">Location</string>
    <string name="letsGetSomeHelp">Let\'s get some help!</string>
    <string name="postAnonymously">Post Anonymously?</string>
    <string name="addToYourPost">Add to your post</string>
    <string name="following">Following</string>
    <string name="youAreBlockedFromfollowing">You are blocked from following</string>
    <string name="andViewingHisPostsAndReviews">and viewing his Posts and Reviews</string>
    <string name="isBlocked">is blocked!</string>
    <string name="unblock">Unblock</string>
    <string name="unmute">Unmute</string>
    <string name="follow">Follow</string>
    <string name="Edit">Edit</string>
    <string name="reputation">Reputation</string>
    <string name="posts">Posts</string>
    <string name="reviews">Reviews</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="mute">Mute</string>
    <string name="yourJob">Your job</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="shareNow">Share Now</string>
    <string name="shareWithComment">Share with comment</string>
    <string name="shareInPrivateMessage">Share in private message</string>
    <string name="copyPostLink">Copy post link</string>
    <string name="shareExternal">Share external</string>
    <string name="disableReact">Disable react</string>
    <string name="savePost">Save post</string>
    <string name="deletePost">Delete post</string>
    <string name="hidePost">Hide post</string>
    <string name="muteUser">Mute user</string>
    <string name="blockUser">Block user</string>
    <string name="reportPost">Report post</string>
    <string name="thisMessageWasDeleted">This message was Deleted…</string>
    <string name="sentAPhoto">sent a photo…</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="chooseImageFrom">Choose Image from</string>
    <string name="sendingImage">Sending image…</string>
    <string name="youCanNotSendEmptyMessage">You can not send empty message…</string>
    <string name="typing">typing…</string>
    <string name="online">online</string>
    <string name="typeAMessage">Type a message…</string>
    <string name="cameraAndStoragePermissionsAreNecessary">"Camera and Storage permissions are necessary…</string>
    <string name="storagePermissionIsNecessary">Storage permission is necessary…</string>
    <string name="areYouSureToDeleteThisMessage">Are you sure to delete this message?</string>
    <string name="no">No</string>
    <string name="seen">seen</string>
    <string name="delivered">delivered</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="noText">No Text</string>
    <string name="deleteForMe">Delete for me</string>
    <string name="deleteForAll">Delete for all</string>
    <string name="hide">Hide</string>
    <string name="helpRequestRefused">Help Request Refused</string>
    <string name="helpRequestAccepted">Help Request Accepted</string>
    <string name="sentYouAHelpRequest">sent you a help request</string>
    <string name="sharedYourPost">Shared your post</string>
    <string name="followedYou">followed you</string>
    <string name="app_name">2HANDS</string>
    <string name="title_activity_followers">FollowersActivity</string>
    <string name="title_activity_followings">FollowingsActivity</string>
    <string-array name="generalSettings">
        <item>Language</item>
        <item>Notifications</item>
        <item>Blocked Users</item>
        <item>Night Mode</item>
        <item>About 2Hands</item>
    </string-array>
    <string-array name="categories">
        <item>General</item>
        <item>Medicine</item>
        <item>Psychology</item>
        <item>Financial</item>
        <item>Social</item>
        <item>Family</item>
    </string-array>
</resources>