<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/drawer_posts"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"

            android:title="@string/myProfile" />
        <item
            android:id="@+id/nav_home"

            android:title="@string/home" />
        <item
            android:id="@+id/nav_trending"

            android:title="@string/trending" />
        <item
            android:id="@+id/nav_followingsPosts"

            android:title="@string/followings" />
        <item
            android:id="@+id/nav_saved"

            android:title="@string/saved" />

    </group>

    <group
        android:id="@+id/drawer_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"

            android:title="@string/settings" />
        <item
            android:id="@+id/nav_signOut"

            android:title="@string/signOut" />

    </group>
</menu>